# docs/swagger.yaml
@@ -7,7 +7,11 @@ definitions:
     type: object
   handlers.errorResponse:
     properties:
-      error:
+      code:
+        type: string
+      message:
+        type: string
+      original_error:
         type: string
     type: object
   handlers.loginRequest:
@@ -69,6 +73,18 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/handlers.authResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.errorResponse'
       summary: Login
       tags:
       - auth
@@ -91,6 +107,14 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/handlers.authResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.errorResponse'
       summary: Refresh access token
       tags:
       - auth
